--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             /* position: absolute;
             top: 50%;
             left: 50%;
+            border-radius:20px;
             transform: translate(-50%, -50%); */
             overflow: hidden;
             margin: auto;
