--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             height: 440px;
             float: right;
             box-sizing: border-box;
-            padding: 60px 80px 20px 100px;
+            padding: 60px 80px 20px 100px
             overflow-y: auto;
         }
         
@@ -253,6 +253,7 @@
                 box-sizing: border-box;
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
+padding: 30px 40px 10px 50px;
                 /* flex-direction: column; */
                 /* padding: 35px 25px 35px 25px;
                 border-radius: 20px;
