--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             height: 440px;
             float: right;
             box-sizing: border-box;
-            padding: 60px 80px 20px 100px
+            padding: 60px 80px 20px 100px;
             overflow-y: auto;
         }
         
@@ -229,7 +229,7 @@
             .master {
                 width: 95%;
                 height: 1000px;
-                margin: auto
+                margin: auto;
             }
             .container {
                 width: 100%;
